--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -12,7 +12,8 @@
     <mat-label>Identity</mat-label>
     <mat-select [(value)]="identity">
 
-        <mat-option value="customer">customer</mat-option>
+        <mat-option value="customer_home">customer(home)</mat-option>
+        <mat-option value="customer_business">customer(business)</mat-option>
         <mat-option value="salesperson">salesperson</mat-option>
 
     </mat-select>
