--- a/src/app/component/salesperson-nav/salesperson-nav.component.html
+++ b/src/app/component/salesperson-nav/salesperson-nav.component.html
@@ -7,6 +7,6 @@
 <button mat-button [routerLink]="['/salesperson/store']">Store</button>
 <button mat-button [routerLink]="['/salesperson/region']">Region</button>
 
-<button mat-button [routerLink]="['/userinfo']">Profile</button>
+<button mat-button [routerLink]="['/salesperson/userinfo']">Profile</button>
 
 <button style="float: right;" mat-button (click)="logout()">logout</button>
