--- a/src/app/component/region/region.component.html
+++ b/src/app/component/region/region.component.html
@@ -1,24 +1,16 @@
 <app-salesperson-nav></app-salesperson-nav>
 
-
+<p>all regions</p>
 <table mat-table [dataSource]="dataSource" matSort>
     <ng-container matColumnDef="rname">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> address </th>
       <td mat-cell *matCellDef="let region"> {{region.rname}} </td>
     </ng-container>
     <ng-container matColumnDef="rmanager">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> manager </th>
-      <td mat-cell *matCellDef="let region"> {{region.rmanager}} </td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> manager's salespersonid </th>
+      <td mat-cell *matCellDef="let region"> {{region.rmanagerid}} </td>
     </ng-container>
-    
-  
-  
-
-  
-
-  
     <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
     <tr mat-row *matRowDef="let myRowData; columns: columnsToDisplay"></tr>
-  
-  
-  </table>
+</table>
+
