--- a/src/app/component/store/store.component.html
+++ b/src/app/component/store/store.component.html
@@ -3,14 +3,14 @@
 <table mat-table [dataSource]="dataSource" matSort>
     <ng-container matColumnDef="address">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> address </th>
-      <td mat-cell *matCellDef="let store"> {{store.address}} </td>
+      <td mat-cell *matCellDef="let store"> {{store.city}} {{store.state}} </td>
     </ng-container>
     <ng-container matColumnDef="smanager">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> manager </th>
-      <td mat-cell *matCellDef="let store"> {{store.smanager}} </td>
+      <td mat-cell *matCellDef="let store"> {{store.sname}} </td>
     </ng-container>
     <ng-container matColumnDef="snum">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> price </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> salesperson number </th>
       <td mat-cell *matCellDef="let store"> {{store.snum}} </td>
     </ng-container>
     <ng-container matColumnDef="region">
