--- a/src/app/component/region/region.component.html
+++ b/src/app/component/region/region.component.html
@@ -14,3 +14,22 @@
     <tr mat-row *matRowDef="let myRowData; columns: columnsToDisplay"></tr>
 </table>
 
+
+<p>How do the various regions compare by sales volume?</p>
+<table border="1">
+  <thead>
+  <tr>
+   <th *ngFor="let column of columnHeaders_regionsales_name">
+          {{column}}
+      </th>
+  </tr>
+  </thead>
+  <tbody>
+     <tr  *ngFor="let item of regionsales">
+     <td *ngFor="let column of columnHeaders_regionsales" title="{{item[column]}}">
+          <div>{{item[column]}}</div>
+
+        </td>
+     </tr>
+  </tbody>
+</table>
