--- a/src/app/component/userinfo/userinfo.component.html
+++ b/src/app/component/userinfo/userinfo.component.html
@@ -5,7 +5,7 @@
 <div class="example-form">
     
     <mat-form-field class="example-full-width">   
-      <input matInput placeholder="customerid" [(ngModel)]="userinfo.cid">
+      <input disabled matInput placeholder="customerid" [(ngModel)]="userinfo.cid">
     </mat-form-field>
   
     <mat-form-field class="example-full-width">
@@ -26,7 +26,7 @@
   <div *ngIf="isCustomerHome()" class="example-form">
     
     <mat-form-field class="example-full-width">   
-      <input matInput placeholder="customerid" [(ngModel)]="homeinfo.income">
+      <input disabled matInput placeholder="homeid" [(ngModel)]="homeinfo.homeid">
     </mat-form-field>
   
     <mat-form-field class="example-full-width">
